git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@7 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -246,6 +246,7 @@
 												<a href="#" class="sub">Reportes&raquo;</a>
 												<ul>
 													<li class="topline"><a href="../invrepcomprasnetasporproducto/startup.agnux">Compras Netas por Producto</a></li>
+                                                                                                        <li class="topline"><a href="../repestadisticocompras/startup.agnux">Estadistico de Compras</a></li>
 												</ul>
 											</li>
 										</ul>
