--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -246,7 +246,7 @@
 												<a href="#" class="sub">Reportes&raquo;</a>
 												<ul>
 													<li class="topline"><a href="../invrepcomprasnetasporproducto/startup.agnux">Compras Netas por Producto</a></li>
-                                                                                                        <li class="topline"><a href="../repestadisticocompras/startup.agnux">Estadistico de Compras</a></li>
+													<li class="topline"><a href="../repestadisticocompras/startup.agnux">Estad&iacute;stico de Compras</a></li>
 												</ul>
 											</li>
 										</ul>
