--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -225,10 +225,10 @@
 											<li>
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
-													<!--
+													
 													<li class="topline"><a href="../com_requisicion/startup.agnux">Requisici&oacute;n</a></li>
 													<li class="topline"><a href="../com_oc_req/startup.agnux">Autorizaci&oacute;n de Requisicion</a></li>
-													-->
+													
 													<li class="topline"><a href="../comordencompra/startup.agnux">Orden de Compra</a></li>
 													<li class="topline"><a href="../comcompraautorizacion/startup.agnux">Autorizaci&oacute;n de O. C.</a></li>
 													<li class="topline"><a href="../entradamercancias/startup.agnux">Facturas de Compras</a></li>
@@ -246,7 +246,7 @@
 												<a href="#" class="sub">Reportes&raquo;</a>
 												<ul>
 													<li class="topline"><a href="../invrepcomprasnetasporproducto/startup.agnux">Compras Netas por Producto</a></li>
-													<li class="topline"><a href="../repestadisticocompras/startup.agnux">Estad&iacute;stico de Compras</a></li>
+                                                                                                        <li class="topline"><a href="../repestadisticocompras/startup.agnux">Estadistico de Compras</a></li>
 												</ul>
 											</li>
 										</ul>
@@ -326,10 +326,10 @@
 													
 													<!--
 													esto solo es para kemika y kathion
-													
+													-->
 													<li class="topline"><a href="../invordpresuben/startup.agnux">Orden de Producci&oacute;n</a></li>
 													<li class="topline"><a href="../invordsubensamble/startup.agnux">Producci&oacute;n de Subensamble</a></li>
-													-->
+													
 													
 													
 													<!--
@@ -413,8 +413,6 @@
 											-->
 										</ul>
 									</li>
-									
-									<!--
 									<li class="accessible">
 										<a href="http://jdsharp.us" class="accessible" id="mod_contable">Contabilidad &raquo;</a>
 										<ul>
@@ -428,9 +426,6 @@
 													<li><a href="../tipopolizas/startup.agnux">Tipos de P&oacute;liza</a></li>
 												</ul>
 											</li>
-									-->
-											
-											
 											<!--
 											<li>
 												<a href="#" class="sub">Generaci&oacute;n P&oacute;lizas Contables &raquo;</a>
@@ -451,11 +446,10 @@
 													<li><a href="#">Estado de Resultados/Proforma IETU</a></li>
 												</ul>
 											</li>
-											-->
-									<!--
+												-->
 										</ul>
 									</li>
-									-->
+									
 									
 									
 									<li class="accessible">
@@ -498,6 +492,7 @@
 												<a href="#" class="sub">Cat&aacute;logos &raquo;</a>
 												<ul>
 													<li><a href="../protipoequipo/startup.agnux">Tipos de Equipo</a></li>
+                                                                                                        <li><a href="../proinstrumentosmedicion/startup.agnux">Instrumentos de Medici&oacute;n</a></li>
 												</ul>
 											</li>
 											
@@ -570,6 +565,20 @@
 											
 										</ul>
 									</li>
+
+                                                                        <li class="accessible" >
+                                                                            <a href="http://jdsharp.us" class="accessible">CRM &raquo;</a>
+                                                                            <ul>
+                                                                                <li><a href="#" class="sub">Catalogos &raquo;</a>
+                                                                                    <ul>
+                                                                                        <li class="topline"><a href="../crmmotivosvisitas/startup.agnux">Motivo&nbsp;de&nbsp;Visita.</a></li>
+                                                                                        <li class="topline"><a href="../crmformascontacto/startup.agnux">Formas&nbsp;de&nbsp;Contacto.</a></li>
+                                                                                        <li class="topline"><a href="../crmmotivosllamadas/startup.agnux">Motivos&nbsp;de&nbsp;Llamadas.</a></li>
+                                                                                    </ul>
+                                                                                </li>
+                                                                                
+                                                                            </ul>
+                                                                        </li>
 									
 									
 									
