git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@171 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -100,6 +100,7 @@
 												<a href="#" class="sub">Cat&aacute;logos &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../clients/startup.agnux">Clientes</a></li>
+													<li class="topline"><a href="../clientsdf/startup.agnux">Direcciones Fiscales</a></li>
 													<li class="topline"><a href="../clientszonas/startup.agnux">Zonas</a></li>
 													<li class="topline"><a href="../clientsgrupos/startup.agnux">Grupos</a></li>
 													<!--<li class="topline"><a href="../agentes/startup.agnux">Agentes</a></li>-->
