--- a/erp-quimicos/src/main/webapp/vm/clientsdf/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/clientsdf/startup.vm
@@ -7,18 +7,14 @@
 		
         <!--  css for this catalogo -->
         <link rel="stylesheet" href="../../css/modalbox/clientsdf/formaclientsdf.css" type="text/css" />
-        
-        <link rel="stylesheet" href="../../css/modalbox/provfacturas/formaBuscaproveedor.css" type="text/css" />
+        <link rel="stylesheet" href="../../css/modalbox/clientsdf/formaBuscaclientes.css" type="text/css" />
 		
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
         <script type="text/javascript" src="../../js/components/modalbox/clientsdf/modalboxclientsdf.js"></script>
         <script type="text/javascript" src="../../js/implements/clientsdf/index.js" ></script>
+        <script type="text/javascript" src="../../js/components/modalbox/clientsdf/modalboxBuscacliente.js"></script>
         
-		
-        <script type="text/javascript" src="../../js/components/modalbox/provfacturas/modalboxBuscaproveedor.js"></script>
-        
-        <!--<script type="text/javascript" src="../../js/implements/repedoctacliente/index.js" ></script>-->
         #include("${layoutmenu}")
         
         <input type="hidden" name="contextpath" value="$url">
@@ -91,7 +87,6 @@
                 <div id="div_one" class="panelcito_modal clientsdf_div_one"  style="display:none;" title="">
                 
                 <input type="hidden" name="identificador">
-                <input type="hidden" name="id_proveedor">
 					
                     <div id="div_two" title="" class="clientsdf_div_two">
                         <div class="columns on-2">
@@ -116,148 +111,184 @@
                                 <div class="fixed column" class="content_x" >
 									
                                     <div id="tabx-1" class="contenidoPes" >
-                                        <table border="0">
+										
+										
+										<table border="0">
 											<tr>
 												<td width="5"></td>
-												<td width="85">Cliente</td>
+												<td width="75">Cliente</td>
 												<td width="5"></td>
-												<td colspan="3"><INPUT TYPE="text" name="cliente" style="width:300px;"></td>
-												<td width="5"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_cliente"></div></td>																								                                                                                               
-												<td width="100" class="cliente"><a href="busca_cliente" style="font-size:13px;">(Buscar)</a></td>
+												<td colspan="7">
+													<INPUT TYPE="text" name="cliente" style="width:410px;">
+													<input type="hidden" name="id_cliente">
+												</td>
+												<td width="35"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_cliente"></div></td>
 												<td width="5"></td>
-												<td width="100">&nbsp;</td>
-												<td width="100">&nbsp;</td> 
-												<td width="100">&nbsp;</td>                                                                                                 
-												<td width="5">&nbsp;</td> 
-											</tr>
-											<tr>
-												<td colspan="13">&nbsp;</td>
-											</tr>
-											<tr>
-												<td width="5">&nbsp;</td>
-												<td width="85">Calle</td>
-												<td width="5">&nbsp;</td>
-												<td colspan="3"><INPUT TYPE="text" name="calle" style="width:200px;"></td>
-												<td width="5"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_calle"></div></td>																								
-												<td width="100">Entre&nbsp;Calles</td>
-												<td width="5">&nbsp;</td>
-												<td colspan="3"><INPUT TYPE="text" name="entreCalles" style="width:300px;"></td> 												                                                                                                                                                                                             
-												<td width="5"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_entreCalles"></div></td>																					
-                                                                                                
-											</tr>
-											<tr>
-												<td colspan="13">&nbsp;</td>
+												<td colspan="3"><a href="busca_cliente">(Buscar&nbsp;cliente)</a></td>
+												<td width="25"></td>
 											</tr>
 											<tr>
 												<td width="5">&nbsp;</td>
-												<td width="85">Numero&nbsp;Int.</td>
-												<td width="5">&nbsp;</td>
-												<td width="100"><INPUT TYPE="text" maxlength="15" name="numInterior" style="width:100px;"></td>
-												<td width="100">&nbsp;</td>
-												<td width="100">&nbsp;</td>
-												<td width="5"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_numInterior"></div></td>																								
-												<td width="100">Numero&nbsp;Ext.</td>
-												<td width="5">&nbsp;</td>												
-												<td width="100" ><INPUT TYPE="text" maxlength="15" name="numExterior" style="width:100px;"></td> 
-												<td width="100"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_numExterior"></div></td>
-												<td width="100">&nbsp;</td>
-												<td width="5">&nbsp;</td>
+												<td width="75"></td>
+												<td width="5"></td>
+												<td width="15"></td>
+												<td width="135"></td>
+												<td width="25"></td>
+												<td width="5"></td>
+												<td width="70"></td>
+												<td width="5"></td>
+												<td width="150"></td>
+												<td width="35"></td>
+												<td width="5"></td>
+												<td width="75"></td>
+												<td width="5"></td>
+												<td width="150"></td>
+												<td width="25"></td>
+											</tr>
+											
 											<tr>
-												<td colspan="13">&nbsp;</td>
+												<td width="5"></td>
+												<td width="75">No.&nbsp;de&nbsp;Control</td>
+												<td width="5"></td>
+												<td width="150" colspan="2"><INPUT TYPE="text" name="nocontrol" readOnly="true" style="width:150px;"></td>
+												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_nocontrol"></div></td>
+												<td width="5"></td>
+												<td width="70">RFC</td>
+												<td width="5"></td>
+												<td width="150"><input type="text" name="rfc" readOnly="true" style="width:150px;"></td>
+												<td width="35"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_rfc"></div></td>
+												<td width="5"></td>
+												<td width="75"></td>
+												<td width="5"></td>
+												<td width="150"></td>
+												<td width="25"></td>
+											</tr>
+											<tr>
+												<td colspan="16">&nbsp;</td>
 											</tr>
 											<tr>
 												<td width="5"></td>
-												<td width="85">Colonia</td>
+												<td width="75">Calle</td>
 												<td width="5"></td>
-												<td colspan="3"><INPUT TYPE="text" name="colonia" style="width:200px;"></td>
-												<td width="5"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_colonia"></div></td>                                                                                               												
-												<td colspan="6">&nbsp;</td>                                                                                                
+												<td colspan="7"><INPUT TYPE="text" name="calle" style="width:410px;"></td>
+												<td width="35"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_calle"></div></td>
+												<td width="5"></td>
+												<td width="75">No.&nbsp;Interior</td>
+												<td width="5"></td>
+												<td width="150"><INPUT TYPE="text" name="numero_int" style="width:150px;"></td>
+												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_numeroint"></div></td>
 											</tr>
 											<tr>
-												<td colspan="13">&nbsp;</td>
-											</tr>
-												<tr>
-												<td width="5"></td>
-												<td width="85">Pa&iacute;s</td>
-												<td width="5"></td>
-												<td colspan="2" >
-													<SELECT NAME="select_pais" style="width:200px;">
-													</SELECT>
-												</td> 
-												<td width="100"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_pais"></div></td>                                                                                               												                                                                                                
-												<td width="5">&nbsp;</td>
-												<td width="100">Estado</td>
-												<td width="5">&nbsp;</td>
-												<td colspan="2" >
-													<SELECT NAME="select_estado" style="width:200px;">                                                                                                            
-													</SELECT>
-												</td> 
-												<td width="100"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_estado"></div></td>                                                                                               												                                                                                                 
-												<td width="5">&nbsp;</td>
-												   
+												<td colspan="16">&nbsp;</td>
 											</tr>
 											<tr>
-												<td colspan="13">&nbsp;</td>
-											</tr>	
-												<tr>
 												<td width="5"></td>
-												<td width="85">Municipio</td>
+												<td width="75">Entre&nbsp;calles</td>
 												<td width="5"></td>
-												<td colspan="2" >
-													<SELECT NAME="select_municipio" style="width:200px;">                                                                                                            
-													</SELECT>
-												</td> 
-												<td width="100"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_municipio"></div></td>                                                                                               												                                                                                               
-												<td width="5">&nbsp;</td>                                                                                            
-												<td width="100">C.P.</td>
-												<td width="5">&nbsp;</td>
-												<td width="100"><INPUT TYPE="text" maxlength="5" name="codigoPostal" style="width:100px;"></td>
-												<td width="100"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_codigoPostal"></div></td>                                                                                               												                                                                                                 
-												<td width="100">&nbsp;</td>												
-												<td width="5">&nbsp;</td>
+												<td colspan="7"><INPUT TYPE="text" name="entrecalles" style="width:410px;"></td>
+												<td width="35"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_entrecalles"></div></td>
+												<td width="5"></td>
+												<td width="75">No.&nbsp;Exterior</td>
+												<td width="5"></td>
+												<td width="150"><INPUT TYPE="text" name="numero_ext" style="width:150px;"></td>
+												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_numeroext"></td>
 											</tr>
 											<tr>
-												<td colspan="13">&nbsp;</td>
-											</tr>	
-											<tr>
-												<td width="5"></td>
-												<td width="85">Tel.&nbsp;1</td>
-												<td width="5"></td>
-												<td width="100"><INPUT TYPE="text" maxlength="10" name="telUno"  style="width:100px;"></td>
-												<td width="100"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_telUno"></div></td>  
-												<td width="100">&nbsp;</td>												
-												<td width="5">&nbsp;</td>
-												<td width="100">Extenci&oacute;n&nbsp;1</td>
-												<td width="5">&nbsp;</td>
-												<td width="100"><INPUT TYPE="text" maxlength="5" name="extUno" style="width:100px;"></td>
-												<td width="100"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_extUno"></div></td>                                                                                               												                                                                                                 
-												<td width="100">&nbsp;</td>
-												<td width="5">&nbsp;</td>
+												<td colspan="16">&nbsp;</td>
 											</tr>
 											<tr>
-												<td colspan="13">&nbsp;</td>
-											</tr>	
-											<tr>
 												<td width="5"></td>
-												<td width="85">Tel.&nbsp;2</td>
+												<td width="75">Colonia</td>
 												<td width="5"></td>
-												<td width="100"><INPUT TYPE="text" maxlength="10" name="telDos" style="width:100px;"></td>
-												<td width="100">&nbsp;<div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_teldos"></div></td>                                                                                               												
-												<td width="100">&nbsp;</td>
-												<td width="5">&nbsp;</td>
-												<td width="100">Extenci&oacute;n&nbsp;2</td>
-												<td width="5">&nbsp;</td>
-												<td width="100"><INPUT TYPE="text" maxlength="5" name="extDos" style="width:100px;"></td>
-												<td width="100"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_extDos"></div></td>                                                                                               												                                                                                                 
-												<td width="100">&nbsp;</td>                                                                                            
-												<td width="5">&nbsp;</td>
+												<td colspan="7"><INPUT TYPE="text" name="colonia" style="width:410px;"></td>
+												<td width="35"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_colonia"></div></td>
+												<td width="5"></td>
+												<td width="75">C.P.</td>
+												<td width="5"></td>
+												<td width="150"><INPUT TYPE="text" name="cp" style="width:150px;"></td>
+												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_cp"></div></td>
 											</tr>
 											<tr>
-												<td colspan="13">&nbsp;</td>
-											</tr>	
- 
-
-                                        </table>
+												<td colspan="16">&nbsp;</td>
+											</tr>
+											<tr>
+												<td width="5"></td>
+												<td width="75">Pa&iacute;s</td>
+												<td width="5"></td>
+												<td colspan="2"><SELECT NAME="select_pais" style="width:150px;"></SELECT></td>
+												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_pais"></div></td>
+												<td width="5"></td>
+												<td width="70">Estado</td>
+												<td width="5"></td>
+												<td width="150"><SELECT NAME="select_estado" style="width:150px;"></SELECT></td>
+												<td width="35"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_estado"></div></td>
+												<td width="5"></td>
+												<td width="75">Municipio</td>
+												<td width="5"></td>
+												<td width="150"><SELECT NAME="select_municipio" style="width:150px;"></SELECT></td>
+												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_municipio"></div></td>
+											</tr>
+											<tr>
+												<td colspan="16">&nbsp;</td>
+											</tr>
+												
+											<tr>
+												<td width="5"></td>
+												<td width="75">Contacto</td>
+												<td width="5"></td>
+												<td colspan="7"><input type="text" name="contacto" style="width:410px;"></td>
+												<td width="35"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_contacto"></div></td>
+												<td width="5"></td>
+												<td width="75">E-mail</td>
+												<td width="5"></td>
+												<td width="150"><INPUT TYPE="text" name="email" style="width:150px;"></td>
+												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_email"></div></td>
+											</tr>
+											<tr>
+												<td width="5" height="7" colspan="16">&nbsp;</td>
+											</tr>
+											<tr>
+												<td width="5"></td>
+												<td width="75">Tel&eacute;fono&nbsp;1</td>
+												<td width="5"></td>
+												<td colspan="2"><INPUT TYPE="text" name="tel1" style="width:150px;"></td>
+												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_tel1"></div></td>
+												<td width="5"></td>
+												<td width="70">Extensi&oacute;n&nbsp;1</td>
+												<td width="5"></td>
+												<td width="150"><INPUT TYPE="text" name="ext1" style="width:150px;"></td>
+												<td width="35"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_ext1"></div></td>
+												<td width="5"></td>
+												<td width="75">Fax</td>
+												<td width="5"></td>
+												<td width="150"><INPUT TYPE="text" name="fax" style="width:150px;"></td>
+												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_fax"></div></td>
+											</tr>
+											<tr>
+												<td width="5" height="7" colspan="16">&nbsp;</td>
+											</tr>
+											<tr>
+												<td width="5"></td>
+												<td width="75">Tel&eacute;fono&nbsp;2</td>
+												<td width="5"></td>
+												<td colspan="2"><INPUT TYPE="text" name="tel2" style="width:150px;"></td>
+												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_tel2"></div></td>
+												<td width="5"></td>
+												<td width="70">Extensi&oacute;n&nbsp;2</td>
+												<td width="5"></td>
+												<td width="150"><INPUT TYPE="text" name="ext2" style="width:150px;"></td>
+												<td width="35"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_ext2"></div></td>
+												<td width="5"></td>
+												<td width="75"></td>
+												<td width="5"></td>
+												<td width="150"></td>
+												<td width="25"></td>
+											</tr>
+											
+											
+										</table>
+                                        
+                                        
                                     </div>
 									
                                 </div>
