--- a/erp-quimicos/src/main/webapp/vm/proordenproduccion/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/proordenproduccion/startup.vm
@@ -142,24 +142,48 @@
                                                                                         <td valign="top" colspan="3" > 
                                                                                             <table border="0" class="gral">
                                                                                                 <tr>
-                                                                                                    <td width="10"></td>
-                                                                                                    <td width="70">Tipo Orden</td>
-                                                                                                    <td width="20"></td>
-                                                                                                    <td>
-                                                                                                        <SELECT NAME="tipoorden" style="width:120px;" />
+                                                                                                    <td width="420">
+                                                                                                        <table>
+                                                                                                            <tr>
+                                                                                                                <td width="70">Tipo Orden</td>
+                                                                                                                <td width="20"></td>
+                                                                                                                <td>
+                                                                                                                    <SELECT NAME="tipoorden" style="width:100px;" />
+                                                                                                                </td>
+                                                                                                                <td width="20"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_tipoorden"></div></td>
+                                                                                                                <td width="40">Fecha</td>
+                                                                                                                <td width="20">&nbsp;</td>
+                                                                                                                <td width="100"><INPUT TYPE="text" name="fecha_elavorar" style="width:100px;" ></td>
+                                                                                                                <td width="20"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_fecha_elavorar"></div></td>
+                                                                                                            </tr>
+                                                                                                            <tr>
+                                                                                                                <td colspna="8">
+                                                                                                                    &nbsp;
+                                                                                                                </td>
+                                                                                                            </tr>
+                                                                                                            <tr>
+                                                                                                                <td width="70">Folio</td>
+                                                                                                                <td width="20">&nbsp;</td>
+                                                                                                                <td>
+                                                                                                                    <INPUT TYPE="text" name="folio_op" style="width:100px;" >
+                                                                                                                </td>
+                                                                                                                <td width="20">&nbsp;</td>
+                                                                                                                <td width="40">Lote</td>
+                                                                                                                <td width="20">&nbsp;</td>
+                                                                                                                <td width="100"><INPUT TYPE="text" name="lote_pop" style="width:100px;" ></td>
+                                                                                                                <td width="20">&nbsp;</td>
+                                                                                                            </tr>
+                                                                                                            
+                                                                                                        </table>
                                                                                                     </td>
-                                                                                                    <td width="20"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_tipoorden"></div></td>
-                                                                                                    <td width="40">Fecha</td>
-                                                                                                    <td width="20">&nbsp;</td>
-                                                                                                    <td width="100"><INPUT TYPE="text" name="fecha_elavorar" style="width:100px;" ></td>
-                                                                                                    <td width="20"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_fecha_elavorar"></div></td>
+                                                                                                    
                                                                                                     <td width="100">Observaciones</td>
                                                                                                     <td width="350">
-                                                                                                        <textarea name="observaciones" style="width:345px;resize: none;" rows="1"></textarea>
+                                                                                                        <textarea name="observaciones" style="width:345px;resize: none;" rows="2"></textarea>
                                                                                                     </td>
                                                                                                 </tr>
                                                                                             </table>
-
+                                                                                            
                                                                                         </td>
                                                                                     </tr>
                                                                                     <tr>
