--- a/erp-quimicos/src/main/webapp/vm/layouts/header.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/header.vm
@@ -17,6 +17,13 @@
 	<script type="text/javascript" src="../../js/components/Datepicker/datepicker.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../../js/components/menu/menu.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../../js/components/menu/oculta_menu.js"></script>
+        
+        <script type="text/javascript" src="../../js/components/Hourpicker/mousewheel.js"></script>
+        <script type="text/javascript" src="../../js/components/Hourpicker/timepickerinputmask.js"></script>
+        <script type="text/javascript" src="../../js/components/Hourpicker/timepickerinputmask.min.js"></script>
+        
+
+
 	
 	<script type="text/javascript" src="../../js/components/easy-tool-tip/easy-tool-tip.js" charset="utf-8"></script>
 	<script type="text/javascript" src="../../js/components/datagrid00/jquery.tablesorter.js"></script>
