--- a/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="../../css/modalbox/pocpedidos/formaBuscapresentaciones.css" type="text/css" />
         <link rel="stylesheet" href="../../css/modalbox/pocpedidos/formaBuscaproducto.css" type="text/css" />
         <link rel="stylesheet" href="../../css/modalbox/pocpedidos/formaCancelaEmision.css" type="text/css" />
-        
+        <link rel="stylesheet" href="../../css/modalbox/pocpedidos/formaDireccionesFiscales.css" type="text/css" />
         
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
@@ -21,6 +21,7 @@
         <script type="text/javascript" src="../../js/components/modalbox/pocpedidos/modalboxBuscapresentaciones.js"></script>
         <script type="text/javascript" src="../../js/components/modalbox/pocpedidos/modalboxBuscaproducto.js"></script>
         <script type="text/javascript" src="../../js/components/modalbox/pocpedidos/modalboxCancelaEmision.js"></script>
+        <script type="text/javascript" src="../../js/components/modalbox/pocpedidos/modalboxDireccionesFiscales.js"></script>
         <script type="text/javascript" src="../../js/implements/pocpedidos/index.js" ></script>
         
         
@@ -167,6 +168,7 @@
                                                                 <td width="80">No.&nbsp;Cliente</td>
                                                                 <td width="120">
                                                                     <input type="hidden" name="id_cliente" value="">
+                                                                    <input type="hidden" name="id_df" value="">
                                                                     <input type="text" name="nocliente" style="width:120px;" readOnly="true">
                                                                 </td>
                                                                 <td width="15"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_nocliente"></div></td>
@@ -912,7 +914,7 @@
 						</tr>
 						<tr>
 							<td width="10"></td>
-							<td width="120">Tipo&nbsp;Cancelaci&oacuten</td>
+							<td width="120">Tipo&nbsp;Cancelaci&oacute;n</td>
 							<td colspan="3" width="270" height="10" style="font-size:13px;">
 								<SELECT NAME="tipo_cancelacion" style="width:200px;"></SELECT>
 							</td>
@@ -923,7 +925,7 @@
 						
 						<tr>
 							<td width="10"></td>
-							<td colspan="4" width="380" height="10" style="font-size:13px;">Motivo de cancelaci&oacuten</td>
+							<td colspan="4" width="380" height="10" style="font-size:13px;">Motivo de cancelaci&oacute;n</td>
 						</tr>
 						<tr>
 							<td width="10"></td>
@@ -955,6 +957,82 @@
 			
 		</div>
 	</div>
-	
 </div>
 </form>
+
+
+<div class="buscador_direcciones_fiscales" style="display:none;">
+	<table width="100%" border="0" class="formaBusqueda_df">
+		<tr>
+			<td>
+				<div class="div_dos_presentaciones">
+					<table width="100%" border="0">
+						<thead>
+							<tr>
+								<td colspan="7" height="50" valign="top"><div class="titulo_df" width="100%"><strong>Direcciones Fiscales del Cliente</strong></div></td>
+							</tr>
+						</thead>
+						<tbody>
+							
+							<tr style="font-size:13px;">
+								<td width="10"></td>
+								<td width="10" style="background:#ffffff"></td>
+								<td width="430"  colspan="3" style="background:#ffffff">Direcciones Fiscales para Facturaci&oacute;n</td>
+								<td width="10" style="background:#ffffff"></td>
+								<td width="10"></td>
+							</tr>
+							
+							<!--
+							<tr style="font-size:13px;">
+								<td width="10"></td>
+								<td width="10" style="background:#ffffff"></td>
+								<td width="430" colspan="3" style="background:#A8A9AB;">C&oacute;digo</td>
+								<td width="10" style="background:#ffffff"></td>
+								<td width="10"></td>
+							</tr>
+							-->
+							
+							<tr>
+								<td width="10"></td>
+								<td width="10" style="background:#ffffff"></td>
+								<td style="background:#ffffff; border: solid 1px #454442;" colspan="3" width="500">
+									<div style="overflow:scroll; overflow-x:auto; overflow-y:auto; width:500px; height:120px; align=top;">
+										<table  border="0" id="tabla_resultado" width="100%" >
+											<!--aqui van los resultados de la busqueda-->
+										</table>
+									</div>
+								</td>
+								<td width="10" style="background:#ffffff"></td>
+								<td width="10"></td>
+							</tr>
+							<tr>
+								<td width="10"></td>
+								<td width="10" colspan="5" height="6" style="background:#ffffff"></td>
+								<td width="10"></td>
+							</tr>
+							<tr>
+								<td width="10"></td>
+								<td width="10" style="background:#ffffff"></td>
+								<!--<td width="70"  style="background:#ffffff"></td>-->
+								<td width="100" style="background:#ffffff"></td>
+								<td width="250" style="background:#ffffff"></td>
+								<td width="80" style="background:#ffffff" align="right">
+									<!--<a href="cencela" style="font-size:13px;">Cancelar</a>-->
+									<input type="button" id="cencela" class="onmouseOutCancelar">
+								</td>
+								<td width="10" style="background:#ffffff"></td>
+								<td width="10"></td>
+							</tr>
+							<tr>
+								<td width="10"></td>
+								<td width="10" colspan="5" height="10" style="background:#ffffff"></td>
+								<td width="10"></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</td>
+		</tr>
+	</table>	
+</div>
+
