--- a/erp-quimicos/src/main/webapp/vm/clients/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/clients/startup.vm
@@ -473,17 +473,17 @@
 											
 											<tr>
 												<td width="5"></td>
-												<td width="75">Cuenta&nbsp;pago&nbsp;M.N.</td>
+												<td width="75">M&eacute;todo&nbsp;de&nbsp;Pago</td>
 												<td width="5"></td>
 												<td width="150"><SELECT NAME="select_metodo_pago" style="width:150px;"></SELECT></td>
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_metodopago"></td>
 												<td width="5"></td>
-												<td width="75">Cuenta&nbsp;pago&nbsp;M.N.</td>
+												<td width="75">Cuenta&nbsp;Pago&nbsp;M.N.</td>
 												<td width="5"></td>
 												<td width="150"><INPUT TYPE="text" name="cuenta_mn" style="width:150px;" maxlength="15"></td>
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_ctamn"></td>
 												<td width="5"></td>
-												<td width="75">Cuenta&nbsp;pago&nbsp;USD</td>
+												<td width="75">Cuenta&nbsp;Pago&nbsp;USD</td>
 												<td width="5"></td>
 												<td width="150" colspan="3"><INPUT TYPE="text" name="cuenta_usd" style="width:150px;" maxlength="15"></td>
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_ctausd"></td>
