--- a/erp-quimicos/src/main/webapp/vm/facturas/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/facturas/startup.vm
@@ -380,14 +380,14 @@
                                                 
                                                 <tr>
                                                     <td colspan="4">
-                                                        <table border="0" class="gral">
+                                                        <table border="1" class="gral">
                                                             <tr>
                                                                 <td width="10"></td>
                                                                 <td width="80"></td>
                                                                 <td width="125"></td>
                                                                 <td width="50"></td>
                                                                 <td width="45"></td>
-                                                                <td width="300"></td>
+                                                                <td width="300" align="right"><input type="button" id="reconstruir_pdf" value="Volver a generar PDF" style="width:150px; font-weight: bold;"></td>
                                                                 <td width="55"></td>
                                                                 <td width="15"></td>
                                                                 <td width="98" align="right">
